# arango-solutions-mcp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  PRD.md  README.md  REVIEW_REPORT.md  __init__.py  arango_connector.py  auth_middleware.py  config.py  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  entrypoint-tests.sh  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  server.py
.circleci/: config.yml
.cursor/: mcp.json
.cursor/rules/: workflow.mdc
.github/workflows/: ci.yml
agents/: __init__.py  agent_base.py  analyzer_management_agent.py  aql_execution_agent.py  backup_management_agent.py  cluster_management_agent.py  collection_management_agent.py  database_management_agent.py  document_crud_agent.py  graph_management_agent.py  graph_traversal_agent.py  index_management_agent.py  manual_management_agent.py  query_profiler_agent.py  transaction_management_agent.py  user_management_agent.py  vector_search_agent.py  view_management_agent.py
charts/: patch.sh
charts/arangodb-mcp-server/: Chart.yaml  values.yaml
fastapi_client_backend/: config.py  llm_orchestrator.py  main.py  mcp_client_setup.py
frontend/: app.py
frontend/templates/: index.html
manuals/: aql_ref.md  optimization.md
mcp_server/: arango_connector.py  config.py  main.py  server.py
mcp_server/agents/: agent_base.py  analyzer_management_agent.py  aql_execution_agent.py  collection_management_agent.py  database_management_agent.py  document_crud_agent.py  (+3 more)
mcp_tools/: __init__.py  analyzer_tools.py  aql_tools.py  backup_tools.py  cluster_tools.py  collection_tools.py  database_tools.py  document_tools.py  embedding_tools.py  graph_tools.py  index_tools.py  manual_tools.py  pattern_memory_tools.py  query_profiler_tools.py  transaction_tools.py  traversal_tools.py  user_tools.py  vector_tools.py  view_tools.py
reasoner_pod/: __init__.py  config.py  dependencies.py  main.py
scripts/: __init__.py  docker-test.sh  generate_pyinstaller_spec.py
tests/: conftest.py  test_agent_unit.py  test_agents.py  test_arango_connector.py  test_auth_middleware.py  test_base_and_decorator.py  test_cluster.py  test_connectivity.py  test_coverage_gaps.py  test_database_manual_analyzer.py  test_health_endpoint.py  test_mcp_e2e.py  test_mcp_tools.py  test_transactions.py  test_traversal.py  test_users.py  test_vector_search.py
(+37 files in other folders)
