[tool.poetry]
name = "mcp-server"
version = "1.0.0"
description = "ArangoDB Model Context Protocol (MCP) Server - Document, Graph, and Search Operations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-arango = "^7.5.0"
mcp = "^1.0.0"
fastmcp = "^2.14.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
anyio = "^4.5.0"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[tool.poetry.group.production.dependencies]
# uvicorn is provided by fastmcp dependency

[tool.poetry.scripts]
arangodb-mcp = "main:run_server_cli"
validate-config = "validate_config:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
